# OpenMAP

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  CONTRIBUTORS.txt  Dockerfile  Fetch_data_online.py  HACKING.rst  MANIFEST.in  OpenMaps-Orchestrator.py  README.md  README.rst  __init__.py  alloys.json  campaign_objective.py  category_writer.py  config.json  config_remote_client.py  contributing.md  db_testing.ipynb  descriptors_writer.py  generate_descriptors.py  jobs.pkl  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_inc.py  search_db.py  setup.cfg  setup.py  tox.ini  vasp_job.sh
.scratch/: sampling_information.pkl
AWS/: aws_sql.py  object_wrapper.py  sql_wrapper.py
ChemOs/.scratch/: sampling_information.pkl
ChemOs/SearchProgress/: search_progress.db
ChemOs/data/: data_generation.py  fcc_alloys.db  fcc_alloys.json  reference_database.db
ChemOs/phoenics_inc/: __init__.py  gryffin.py
ChemOs/runs/: gryf_3.pkl  rand_1.pkl  rand_2.pkl  rand_3.pkl  rand_5.pkl  rand_7.pkl  rand_8.pkl
Configuration/: DataBase_config.yml  HPC_config.yml  config.json
HPC/: cluster_communicator.py  config.py  main.py  qsub.py  qsub_vasp.py  remote_client.py  slurm_py.py  vasp_job.py
HPC/ParamikoTools/: client.py  files.py
ParamikoTools/: aws.py  client.py  log.py  qsub_vasp.py
Tools/: Parser.py  Properties.py  PyVasp.py
docs/: requirements.txt
docs/source/: conf.py  contributing.rst  index.rst  install.rst  modules.rst  openmap.analysis.rst  openmap.aws.rst  openmap.computing.rst  openmap.computing.slurm_vasp.rst  openmap.configuration.resources.rst  openmap.configuration.rst  openmap.configuration.vasp_settings.inputs.rst  openmap.configuration.vasp_settings.rst  openmap.configuration_template.rst  openmap.data_wrapper.rst  openmap.optimizer.phoenics_inc.Acquisition.NumpyOptimizers.rst  openmap.optimizer.phoenics_inc.Acquisition.rst  openmap.optimizer.phoenics_inc.BayesianNetwork.EdwardInterface.rst  openmap.optimizer.phoenics_inc.BayesianNetwork.TfprobInterface.rst  openmap.optimizer.phoenics_inc.BayesianNetwork.rst  openmap.optimizer.phoenics_inc.DatabaseHandler.JsonWriters.rst  openmap.optimizer.phoenics_inc.DatabaseHandler.PandasWriters.rst  openmap.optimizer.phoenics_inc.DatabaseHandler.PickleWriters.rst  openmap.optimizer.phoenics_inc.DatabaseHandler.SqliteInterface.rst  openmap.optimizer.phoenics_inc.DatabaseHandler.rst  openmap.optimizer.phoenics_inc.DescriptorGenerator.rst  openmap.optimizer.phoenics_inc.ObservationProcessor.rst  openmap.optimizer.phoenics_inc.RandomSampler.rst  openmap.optimizer.phoenics_inc.SampleSelector.rst  openmap.optimizer.phoenics_inc.rst  openmap.optimizer.phoenics_inc.utilities.rst  openmap.optimizer.rst  openmap.plotting.rst  openmap.qm_mm.analysis.rst  openmap.qm_mm.rst  openmap.qm_mm.vasp.rst  openmap.qm_mm.vasp.settings.inputs.rst  openmap.qm_mm.vasp.settings.rst  openmap.qm_mm.vasp.slurm.rst  openmap.rst  (+7 more)
openmap/: __init__.py  campaign_objective.py  category_writer.py  db_test.ipynb  log.py  main.py  metal_oxyde.json  online_wrapper.py  orchestrate.py  orchestrator.py  run_rand.py  search_db.py  ttyrecord
openmap-egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
openmap/.scratch/: sampling_information.pkl
openmap/CatDetails/: cat_details_metal_oxyde.pkl
openmap/SearchProgress/: search_progress.db
openmap/analysis/: constants.py  parser.py  properties.py  pyvasp.py  utils.py
openmap/aws/: __init__.py  aws_hcp.txt  aws_hpc.txt  file_transfert.py  object_wrapper.py  sanum.py  sql_wrapper.py
openmap/computing/: __init__.py  client.py  imap.py  input_generator.py  job.py  log.py
openmap/configuration/: ChemOs_config.json  ChemOs_fig.json  DataBase_config.yml  HPC_config.yml  Query.yml  __init__.py  config_remote_client.py  site.cfg
openmap/configuration_template/: DataBase_config.yml  HPC_config.yml  Optimizer_config.json  __init__.py
openmap/core/: parser.py  pyvasp.py  utils.py
openmap/data_wrapper/: MpWrapper.py  NomadWrapper.py  OqWrapper.py  __init__.py  mysql_db.py  search_db.py
openmap/databases/: NomadWrapper.py  __init__.py  sql_db.py
openmap/db_wrapper/: MpWrapper.py  OqWrapper.py  __init__.py  mysql_db.py  search_db.py
openmap/mmodelling/: __init__.py  input_generator.py  job.py
openmap/nomad/: nomad_wrapper.py
openmap/plotting/: plots.py
openmap/qm_mm/: input_generator.py  job.py  objective.py
openmaps/: Makefile  OpenMaps-Orchestrator.py  category_writer.py  descriptors_writer.py  fetch_data_online.py  main.py  orchestrator.py  run_rand.py
openmaps-egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
plotting/: plots.py
runs/: gryf_0.pkl  gryf_841.pkl
tests/: __init__.py  test_databases.py
(+173 files in other folders)
