[tool.poetry]
name = "toxicworkenvironment"
version = "0.1.0"
description = ""
authors = ["Conrard Tetsassi <giresse.feugmo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.openmap.api"

#[build-system]
#requires = ["setuptools", "wheel"]
#build-backend = "setuptools.build_meta"


[tool.pytest]
python_files = ["tests/test_*.py"]

[tool.black]
line-length = 120
skip-string-normalization = true
#py36 = false
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | dist
  | build
  | docs
  | hea/tests/tests_files/*
  | hea/training_data/
  | hea/tools/heatofmixing.py
  | hea/tools/miedema.py
  | hea/tools/properties.py
  | hea/pyhea.py
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["tests"]
skip_glob = ["docs/*"]
include_trailing_comma = true
skip = [".tox", ".venv"]

[tool.flake8]
show-source = true
# E123, E125 skipped as they are invalid PEP-8.
# N802 skipped (function name should be lowercase)
# N806 skipped (variable in function should be lowercase)
# F401 skipped (imported but unused) after verifying current usage is valid
# W503 skipped line break before binary operator
# C901 skipped: 'MLaunchTool.init' is too complex
ignore = ["E123", "E125", "N802", "N806", "F401", "W503", "C901", "F401"]
select = ["B", "C", "E", "F", "W", "T4", "B9"]
skip_install = true
builtins = [" _"]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | dist
  | build
  | docs
)/
'''
# venv,.venv,.git,.tox,dist,*lib/python*,*egg,*figures/*,__init__.py,build/*,setup.py,hea/util/*,hea/tests/test_*
count = true
statistics = true
max-line-length = 120
max-complexity = 18

[tool.doc8]
