[tool.poetry]
name = "openmap"
version = "0.1.0"
description = "OpenMap is an Automated Material Acceleration Platforms"
authors = ["Feugmo <giresse.feugmo@gmail.com>"]
readme ="README.rst"
homepage = ""
repository ="https://github.com/CLEANit/OpenMAP"
documentation =  ""
keywords = [
    "Self-driven Laboratory",
    "Orchestartor"
]

[tool.poetry.dependencies]
python = "^3.8"
aws = "^0.2.5"
tensorflow = "^2.2.0"
tensorflow-gpu = "^2.2.0"
matminer = "^0.6.5"
loguru = "^0.5.3"
nomad-lab = "^0.10.2"
paramiko = "^2.7.2"
Cython = "^0.29.22"
qmpy-rester = "^0.2.0"
scp = "^0.13.3"
SQLAlchemy = "^1.4.7"
ase = "^3.19.0"
h5py = "^2.10.0"
mendeleev = "^0.7.0"
PyYAML = "^5.4.1"
tensorflow-probability = "^0.12.1"
edward2 = {git = "https://github.com/google/edward2.git"}
cryptography = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
tox = "^3.23.0"
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"

#autopep8 = "^1.5.6"
#doc8 = "^0.8.1"
#coverage = "^5.5"
#pytest-cov = "^2.11.1"
#mypy = "^0.750.0"
#flake8-bandit = "^2.1"
#flake8-docstrings = "^1.5"
#sphinx = { version = "^2.2", optional = true }
#sphinx_rtd_theme = { version = "^0.4.3", optional = true  }

[tool.poetry.extras]
test = ["pytest"]
docs = ["sphinx", "sphinx_rtd_theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



#[tool.pytest]
#python_files = ["tests/test_*.py"]

[tool.black]
line-length = 120
skip-string-normalization = true
#py36 = false
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | dist
  | build
  | docs
  | hea/tests/tests_files/*
  | hea/training_data/
  | hea/tools/heatofmixing.py
  | hea/tools/miedema.py
  | hea/tools/properties.py
  | hea/pyhea.py
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["tests"]
skip_glob = ["docs/*"]
include_trailing_comma = true
skip = [".tox", ".venv"]

[tool.flake8]
show-source = true
# E123, E125 skipped as they are invalid PEP-8.
# N802 skipped (function name should be lowercase)
# N806 skipped (variable in function should be lowercase)
# F401 skipped (imported but unused) after verifying current usage is valid
# W503 skipped line break before binary operator
# C901 skipped: 'MLaunchTool.init' is too complex
ignore = ["E123", "E125", "N802", "N806", "F401", "W503", "C901", "F401"]
select = ["B", "C", "E", "F", "W", "T4", "B9"]
skip_install = true
builtins = [" _"]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | dist
  | build
  | docs
)/
'''
# venv,.venv,.git,.tox,dist,*lib/python*,*egg,*figures/*,__init__.py,build/*,setup.py,hea/util/*,hea/tests/test_*
count = true
statistics = true
max-line-length = 120
max-complexity = 18

[tool.doc8]
max-line-length = 120
